# zev

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/zev/: command_history.py  command_selector.py  constants.py  history.py  llm.py  main.py  utils.py
src/zev/config/: __init__.py  setup.py  types.py
src/zev/llms/: inference_provider_base.py  llm.py  types.py
src/zev/llms/anthropic/: provider.py  setup.py
src/zev/llms/azure_openai/: provider.py  setup.py
src/zev/llms/gemini/: provider.py  setup.py
src/zev/llms/ollama/: provider.py  setup.py
src/zev/llms/openai/: provider.py  setup.py
